--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Metal detox maska</title>
+    <title>Metal detox szampon</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap"
@@ -22,7 +22,7 @@
           <div class="es-kv__content">
             <img src="./images/logo.png" alt="" class="es-kv__logo">
             <p class="es-kv__title">
-              <strong>MASKA</strong>
+              <strong>SZAMPON</strong>
             </p>
             <p class="es-kv__title-big">
               Metal
@@ -30,13 +30,9 @@
             <p class="es-kv__title-bigger">
               Detox
             </p>
-            <p class="es-kv__subtitle">
-              <strong>Pielęgnacja włosów <br>
-              w 1 minutę</strong>
-            </p>
             <p class="es-kv__text">
-              Dla włosów farbowanych<br>
-              lub zniszczonych
+              <strong>Dla włosów farbowanych<br>
+              lub zniszczonych</strong>
             </p>
           </div>
         </div>
@@ -59,20 +55,16 @@
       <div class="es-benefits">
         <div class="es-benefits__bg">
           <div class="es-benefits__content">
-            <img src="./images/benefits-1.png" alt="" class="es-benefits__image">
-            <p class="es-benefits__text">
-              złamań włosów*
-            </p>
             <div class="es-benefits__divider"></div>
             <div class="es-benefits__divider"></div>
             <img src="./images/benefits-2.png" alt="" class="es-benefits__image">
             <p class="es-benefits__text">
-              dłuższa trwałość koloru**
+              dłuższa trwałość koloru*
             </p>
             <div class="es-benefits__divider"></div>
             <img src="./images/benefits-3.png" alt="" class="es-benefits__image">
             <p class="es-benefits__text">
-              bardziej błyszczące włosy**
+              bardziej błyszczące włosy*
             </p>
           </div>
           <div class="es-benefits__right">
@@ -111,12 +103,14 @@
           </div>
           <div class="es-metale__content">
             <p class="es-metale__subtitle">
-              Maska<br>metal detox
+              Szampon<br>metal detox
             </p>
             <ul class="es-metale__list">
               <li class="es-metale__item">chroni włosy przed odkładaniem się zanieczyszczeń metali</li>
-              <li class="es-metale__item">sprawia, że włosy są odżywione i&nbsp;mniej porowate</li>
-              <li class="es-metale__item">efekt: mięsiste, miękkie i&nbsp;pełne blasku włosy</li>
+              <li class="es-metale__item">oczyszcza włosy zapobiegając gromadzeniu się związków takich jak&nbsp;miedź</li>
+              <li class="es-metale__item">orzeźwiająco-owocowy zapach</li>
+              <li class="es-metale__item">kremowa formuła łatwa w&nbsp;spłukiwaniu</li>
+              <li class="es-metale__item">włosy wyglądają zdrowo, są&nbsp;mięsiste, miękkie i&nbsp;pełne blasku</li>
             </ul>
           </div>
         </div>
@@ -149,25 +143,6 @@
         </div>
       </div>
 
-      <div class="es-use">
-        <div class="es-use__headline">
-          <h2 class="es-use__title">
-          sposób użycia
-          </h2>
-        </div>
-        <div class="es-content">
-          <p class="es-use__text">
-            Rozprowadź równomiernie na osuszone ręcznikiem włosy.<br>
-            Pozostaw na 1 minutę. Spłucz dokładnie.<br>
-            Dla optymalnych rezultatów stosuj po użyciu szamponu.
-          </p>
-          <p class="es-use__subtext">
-            W przypadku dostania się preparatu do oczu, natychmiast przepłukać je wodą.
-          </p>
-        </div>
-      </div>
-
-
       <div class="es-video">
         <div class="es-video__container">
           <iframe
@@ -181,7 +156,13 @@
           ></iframe>
         </div>
       </div>
-
+      <div class="es-use">
+        <div class="es-use__headline">
+          <h2 class="es-use__title">
+          dwa kroki w pielęgnacji Metal Detox
+          </h2>
+        </div>
+      </div>
 
       <div class="es-cross">
         <img src="./images/cross-bg.png" alt="" class="es-cross__bg">
@@ -207,8 +188,7 @@
             </div>
           </div>
           <p class="es-cross__footer">
-            *Test instrumentalny po zastosowaniu Maski Metal Detox<br>
-            ** Test instrumentalny po zastosowaniu Szamponu Metal Detox + Maski Metal Detox
+            * Test instrumentalny po zastosowaniu Szamponu Metal Detox + Maski Metal Detox
           </p>
         </div>
 
